# Nucleus

./: .gitignore  LICENSE  MANIFEST.in  README.md  launch.py  nucleus.py  pyproject.toml  requirements.txt
gui/: app.py  package.json
gui/src/: App.jsx
gui/src/components/: Terminal.jsx
nucleus/: __init__.py  _version.py  gui.py  main.py  nucleus.py  prompts.py  tools.py
nucleus/data_viz/: __init__.py  app.py  planner.py
nucleus/terminal/: suggestion.py
nucleus/visualization/: package-lock.json  package.json
nucleus/visualization/src/: App.js  assembly.js  defaultSession.js  tracks.js  workerPolyfill.js
nucleus/visualization/src/components/: tracks.js
react-world/: CHANGELOG.md  package.json  tsconfig.json
react-world/jbrowse-chat/: package-lock.json  package.json
react-world/jbrowse-chat/.parcel-cache/: 4987902b3f9787cc-BundleGraph-0  70f1f7555dda250d-AssetGraph-0  771a09cabdd0e280-AssetGraph-0  7b8e4611c0f03524-AssetGraph-0  7f973df67467291d-AssetGraph-0  b42dcb70dd9637c0-BundleGraph-0  lock.mdb  requestGraph-369948a06d23ec44-0  requestGraph-39676f90f93af3b1-0  requestGraph-nodes-0-369948a06d23ec44-0  requestGraph-nodes-0-39676f90f93af3b1-0  snapshot-369948a06d23ec44.txt  snapshot-39676f90f93af3b1.txt
react-world/jbrowse-chat/src/: index.css
react-world/src/: extension.ts
